# calypso

./: README.md  pyproject.toml
agent/: baseline.py
data/: customers.csv  orders.csv  orders1.csv  orders2.csv  products.csv  schema.md
notebooks/: 00_data_initialization.ipynb  01_eda.ipynb  02v1_agent_engineering.ipynb  02v2_agent_engineering.ipynb
