[project]
name = "calypso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "litellm>=1.74.15.post1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
]
